2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* transforms.{cc,hh} (localized, localized_as_string): Remove.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* transforms.cc (utf8_to_system): Make fast.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* transforms.hh (utf8_to_system): Add a string->string version.
	* transforms.cc (utf8_to_system): Implement it.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (localized_path_str): New function.
	Fix some tests.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* commands.cc: Convert to paths.hh.
	* mkstemp.cc (monotone_mkstemp): Likewise.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* vocab_terms.hh, vocab.cc: Remove file_path, local_path.
	* database.{hh,cc}, monotone.cc: Convert to paths.hh.
	* file_io.{hh,cc}: Start to convert to paths.hh.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* paths.{cc,hh} (fully_normalized_path): Implement.
	(external_path): Rename to system_path.
	Misc. other updates.

2005-08-20  Nathaniel Smith  <njs@codesourcery.com>

	* paths.cc (is_absolute): New function.
	(file_path::file_path(vector<path_component>))
	(file_path::split): Implement.

2005-08-20  Nathaniel Smith  <njs@pobox.com>

	* interner.hh (interner): Add a scary constructor that lets us
	insert an initial value and assert that we already knew that the
	value assigned to it would be.  (This lets us make it an inlined
	constant.)

2005-08-20  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Yet more tests.

2005-08-20  Nathaniel Smith  <njs@pobox.com>
	
	* paths.cc (save_initial_path): Implement.
	Add more tests.
	
2005-08-20  Nathaniel Smith  <njs@codesourcery.com>

	* paths.{cc,hh}: New files.
	* Makefile.am (MOST_SOURCES): Add them.
	* unit_tests.hh (add_paths_tests): Declare.
	* unit_tests.cc (init_unit_test_suite): Add them.
	* platform.hh (get_current_working_dir)
	(change_current_working_dir):  New functions.
	* {unix,win32}/fs.cc: New files.

2005-08-19  Nathaniel Smith  <njs@codesourcery.com>
